--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "publicsuffix"
-description = "Accurately parse domain names using The Public Suffix List"
-version = "0.0.5"
+description = "A robust and reliable library for parsing domain names"
+version = "1.0.0"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/rushmorem/publicsuffix"
 documentation = "https://docs.rs/publicsuffix"
