--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,23 @@ readme = "README.md"
 keywords = ["tld", "gtld", "cctld", "domain", "psl"]
 authors = ["rushmorem <rushmore@webenchanter.com>"]
 
+[features]
+default = ["remote_list"]
+remote_list = ["hyper", "native-tls"]
+
 [dependencies]
-hyper = { version = "0.9", default-features = false, features = [] }
-native-tls = "0.1"
 error-chain = "0.7"
 idna = "0.1"
 regex = "0.2"
+
+[dependencies.hyper]
+version = "0.9"
+default-features = false
+optional = true
+
+[dependencies.native-tls]
+version = "0.1"
+optional = true
 
 [dev_dependencies]
 rspec = "1.0.0-beta.3"
