--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "publicsuffix"
 description = "A robust and reliable library for parsing domain names"
-version = "1.2.0"
+version = "1.3.0"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/rushmorem/publicsuffix"
 documentation = "https://docs.rs/publicsuffix"
@@ -18,6 +18,7 @@ error-chain = "0.7"
 idna = "0.1"
 regex = "0.2"
 url = "1.2"
+lazy_static = "0.2"
 
 [dependencies.native-tls]
 version = "0.1"
