--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "publicsuffix"
-description = "A robust and reliable library for parsing domain names"
-version = "1.3.1"
+description = "Robust domain name parsing and RFC compliant email address validation"
+version = "1.3.2"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/rushmorem/publicsuffix"
 documentation = "https://docs.rs/publicsuffix"
