--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ remote_list = ["native-tls"]
 [dependencies]
 error-chain = "0.12"
 idna = "0.2"
-regex = "1.0"
+regex = { version = "1.0", default-features = false, features = ["std"] }
 url = "2.0"
 lazy_static = "1.0"
 
