--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "publicsuffix"
 description = "Robust domain name parsing and RFC compliant email address validation"
-version = "2.0.0"
+version = "2.0.1-alpha.0"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/rushmorem/publicsuffix"
 documentation = "https://docs.rs/publicsuffix"
