--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,11 @@ punycode = ["idna"]
 std = []
 
 [dependencies]
-idna = { version = "0.2.2", optional = true }
 hashbrown = "0.11.0"
-psl-types = "2.0.1"
+psl-types = "2.0.2"
+
+# Optional dependencies
+idna = { version = "0.2.2", optional = true }
 unicase = { version = "2.6.0", default-features = false, optional = true }
 
 [dev-dependencies]
