--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,27 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  check:
+    name: Check on v1.41
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.41.1
+          override: true
+
+      - name: Run cargo check
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+          args: --all-features
+
   test:
-    name: Test
+    name: Test on stable
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -16,12 +35,6 @@ jobs:
           toolchain: stable
           override: true
           components: rustfmt, clippy
-
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-features
 
       - name: Run cargo fmt
         uses: actions-rs/cargo@v1
