--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ punycode = ["idna"]
 std = []
 
 [dependencies]
-hashbrown = "0.11.0"
+byteorder = { version = "1.4.3", default-features = false }
+hashbrown = { version = "0.11.0", default-features = false, features = ["inline-more"] }
 psl-types = "2.0.2"
 
 # Optional dependencies
