--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "publicsuffix"
-description = "A native library for Mozilla's Public Suffix List"
+description = "Extract root domain and suffix from a domain name"
 version = "2.1.1-alpha.0"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/rushmorem/publicsuffix"
 documentation = "https://docs.rs/publicsuffix"
 readme = "README.md"
-keywords = ["tld", "gtld", "cctld", "psl", "no_std"]
+keywords = ["tld", "psl", "no_std", "tldextract", "domain"]
 authors = ["rushmorem <rushmore@webenchanter.com>"]
 edition = "2018"
 
