--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ std = []
 
 [dependencies]
 byteorder = { version = "1.4.3", default-features = false }
-hashbrown = { version = "0.12.3", default-features = false, features = ["inline-more"] }
+hashbrown = { version = "0.12.3", features = ["inline-more"] }
 psl-types = "2.0.10"
 
 # Optional dependencies
