bring back support for older compilers
v2.2.0 upgraded `hashbrown` and switched to Rust 2021. This broke
support on compilers older than v1.56 unnecessarily. This commit
brings back support for such compilers by switching back to Rust 2018
and making `hashbrown` optional.

By default this crate now uses `std::collections::HashMap` which is
a bit slower than `hashbrown::HashMap`. If you need that extra
performance back, please enable the `hashbrown` feature.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all-features
+          args: --features std
 
   test:
     name: Test on stable
